terminado falta css a probar

--- a/index.html
+++ b/index.html
@@ -16,19 +16,33 @@
 <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="quienes-somos.html">Quienes Somos</a></li>
-<li><a href="donde-estamos">Donde Estamos</a></li>
+<li><a href="donde-estamos.html">Donde Estamos</a></li>
 </ul>
  </nav>
     <aside>
 <article>
-    <h1></h1>
+    <h1>Siguenos en facebook</h1> <!--codigo de facebook-->
+
 </article>
 
 <article>
+    <h1>oferta del mes</h1>
+    <img src="images/oferta.png" alt="oferta del mes telescopios a partir de 49 dolares ">
 </article>
-
     </aside>
 
+    <section>
+    <article>
+        <h1>inicio</h1>
+        <p>en telescopios  <strong>MEDINA</strong>damos el mejor servicio
+
+        </p>
+    </article>
+    </section>
+
+    <footer>
+        <p>copyright telescopios medina <a href="#">aviso legal</a></p>
+    </footer>
 
 </body>
 </html>
