--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="estilos.css" type="text/css">
 </head>
 <body>
+    <div class="container">
     <header>
         <hgroup> 
        <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
@@ -14,7 +15,7 @@
     </header>
 
     <nav>
-<ul>
+   <ul>
 <li><a href="index.html">Inicio</a></li>
 <li><a href="quienes-somos.html">Quienes Somos</a></li>
 <li><a href="donde-estamos.html">Donde Estamos</a></li>
@@ -44,6 +45,6 @@
     <footer>
         <p>copyright telescopios medina <a href="#">aviso legal</a></p>
     </footer>
-
+</div>
 </body>
 </html>
