--- a/donde-estamos.html
+++ b/donde-estamos.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telescopio</title>
+    <link rel="stylesheet" href="estilos.css" type="text/css">
 </head>
 <body>
     <header>
